[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pystorytv"
version = "0.1.0"
description = "A complete Python API wrapper for StoryTV — browse, stream, and download shows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "groot" }]
keywords = ["storytv", "streaming", "api", "wrapper", "downloader"]

dependencies = [
    "httpx>=0.27",
    "yt-dlp>=2024.3",
    "keyring>=24",
    "platformdirs>=4",
]

[project.urls]
Documentation = "https://pystorytv.vrma.dev"
Source = "https://github.com/vaultdmn/pystorytv"

[tool.hatch.build.targets.wheel]
packages = ["pystorytv"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
